--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,9 +5,9 @@ on:
     branches: [main]
 
 env:
-  ACCOUNT_ID: "" # set your aws account id
-  REGION: "" # set your aws region (e.g., us-east-1)
-  REPO_NAME: "" # set your ecr repository name
+  ACCOUNT_ID: "507836838857" # set your aws account id
+  REGION: "us-east-1" # set your aws region (e.g., us-east-1)
+  REPO_NAME: "go-instance" # set your ecr repository name
 
 jobs:
   build-and-push:
@@ -31,5 +31,7 @@ jobs:
         run: |
           # todo: replace this step with your docker build, tag, and push commands
           # refer to docs/docker-commands.md for guidance on the required commands
-          echo "docker build, tag, and push commands not implemented"
-          exit 1
+          
+          docker build -t my-app:latest .
+          docker tag my-app:latest ${{ env.ACCOUNT_ID }}.dkr.ecr.${{ env.REGION }}.amazonaws.com/${{ env.REPO_NAME }}:latest
+          docker push ${{ env.ACCOUNT_ID }}.dkr.ecr.${{ env.REGION }}.amazonaws.com/${{ env.REPO_NAME }}:latest
